# ccompiler

./: '  CMakeLists.txt  Doxyfile  Makefile  README.md
.github/workflows/: c.yml
assets/: astTest.c  exampleLines.txt  includeExample.h  includeExample2.h  macroExample.c
assets/astTest/: enums.c  funcs.c  goto.c  if.c  operations.c  primitiveDeclarations.c  structDeclarations.c  switch.c  while.c
assets/tests/: backslash1.txt  backslashResult1.txt  tokens.txt
docs/: mainpage.md
preprocessor/: lines.h  linesTest.c  tests.h
src/: argParser.c  argParser.h  main.c  mainArgs.c  mainArgs.h  preprocessor.c  preprocessor.h  token.c  token.h  tokenizer.c  tokenizer.h
src/ast/: arrayDecl.c  arrayDecl.h  astState.c  astState.h  astUtil.c  astUtil.h  block.c  block.h  charConstant.c  charConstant.h  compStatement.c  compStatement.h  declaration.c  declaration.h  doWhile.c  doWhile.h  enumDecl.c  enumDecl.h  expression.c  expression.h  file.c  file.h  floatConst.c  floatConst.h  for.c  for.h  funcDecl.c  funcDecl.h  funcDef.c  funcDef.h  globDecl.h  identifier.c  identifier.h  if.c  if.h  initializer.c  initializer.h  intConstant.c  intConstant.h  iteration.c  (+37 more)
src/preprocessor/: lines.c  lines.h  linesTest.c  linesTest.h  ppArgParser.c  ppArgParser.h  ppMain.c  stages.c  stages.h  stagesTest.c  stagesTest.h
src/sem/: sarray.c  sarray.h  scompound.c  scompound.h  scope.c  scope.h  senum.c  senum.h  sfunction.c  sfunction.h  spointer.c  spointer.h  sprim.c  sprim.h  stypedef.c  stypedef.h  styperef.c  styperef.h  type.c  type.h  typeGen.c  typeGen.h
src/shared/: allTests.c  tests.c
src/tests/: allTests.c  astTest.h  dlistTest.c  dlistTest.h  dstrTest.c  dstrTest.h  macroDictTest.c  macroDictTest.h  test.c  test.h  testArgs.c  testArgs.h  tokenizerTest.c  tokenizerTest.h  tools.c  tools.h  typeGenTest.h  wordDictTest.c  wordDictTest.h  wordListTest.c  wordListTest.h
src/tok/: preprocessor.c  preprocessor.h  token.c  token.h  tokenizer.c  tokenizer.h
src/util/: callbacks.h  color.h  dict.c  dict.h  dlist.c  dlist.h  dstr.h  hash.c  hash.h  (+14 more)
